--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -34,5 +34,7 @@
         <!-- Descriptive text. -->
         <div id="imgText"></div>
     </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
